fix: fix overflow of the page

--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,11 @@
   --main-four-color: #828282
 
 }
-
-*{
+.App{
   overflow-x: hidden;
+  
 }
+
 
 
 
